Stopped tree visualisation from overlapping tree view control bars

--- a/visualiser/styles.css
+++ b/visualiser/styles.css
@@ -91,6 +91,7 @@ html, body {
     border-radius: 12px;
     margin: 20px;
     height: 44px;
+    z-index: 1000;
 }
 
 .tree-view-controls img {
